--- a/ritika.html
+++ b/ritika.html
@@ -6,5 +6,5 @@
 <hr>
 
 <p>
-  
+  Ritika Singh is an Indian actress and mixed martial artist, who predominantly appears in Tamil films and also has appeared in Hindi and Telugu films
 </p>
