--- a/ritika.html
+++ b/ritika.html
@@ -7,3 +7,6 @@
 <p>
   Ritika Singh is an Indian actress and mixed martial artist, who predominantly appears in Tamil films and also has appeared in Hindi and Telugu films
 </p>
+<p>
+  contact: 4555 788 999
+</p>
